# QMetaWatchProtocol

./: CMakeLists.txt  QMWProtocolConfig.cmake.in
cmake/: FindBBSystem.cmake  blackberry.toolchain.cmake
src/: CMakeLists.txt  clockwidget.cpp  clockwidget.h  controlfullscreenmessage.cpp  controlfullscreenmessage.h  devicetypemessage.cpp  devicetypemessage.h  normalwidget.cpp  normalwidget.h  page.cpp  page.h  realtimeclockmessage.cpp  realtimeclockmessage.h  screen.cpp  screen.h  setwidgetlistmessage.cpp  setwidgetlistmessage.h  watchpropertyoperationmessage.cpp  watchpropertyoperationmessage.h  widget.cpp  widget.h  widgetpayload.cpp  widgetpayload.h  writelcdbuffermessage.cpp  writelcdbuffermessage.h
src/core/: metawatchmessage.cpp  metawatchmessage.h  metawatchprotocol.cpp  metawatchprotocol.h  protocoldispatcher.cpp  protocoldispatcher.h
tests/: CMakeLists.txt  clockwidgettest.cpp  controlfullscreenmessagetest.cpp  devicetypemessagetest.cpp  exampletest.cpp  metawatchprotocoltest.cpp  pagetest.cpp  protocoldispatchertest.cpp  protocoltest.cpp  realtimeclockmessagetest.cpp  screentest.cpp  setwidgetlistmessagetest.cpp  watchpropertyoperationmessagetest.cpp  widgetpayloadtest.cpp  widgettest.cpp  writelcdbuffermessagetest.cpp
